[feature/LOGS] Added Kill button in logs and resolved alignment issues in SO

--- a/src/app/pages/rpautomation/rpa-credentials/rpa-credentials.component.css
+++ b/src/app/pages/rpautomation/rpa-credentials/rpa-credentials.component.css
@@ -134,8 +134,9 @@ input[type="text"]:not(.mat-input-element), input[type="password"] {
 } 
 .credential-tablegrid {
   width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding-top: 20px;
+  height: calc(100vh - 330px);
 }
 
 .credential-tablegrid table td span{
